<resources>
    <!-- General Strings-->
    <string name="app_name">AndroidTest</string>

    <!-- Main Screen Strings -->
    <string name="activity_main_title">Coding Tasks</string>
    <string name="company_photo_content_description">AppPartner Company Photo</string>
    <string name="chat_button">CHAT</string>
    <string name="login_button">LOG IN</string>
    <string name="animation_button">ANIMATION</string>
    <string name="fade_button">FADE</string>
    <string name="activity_chat_title">Chat</string>
    <string name="activity_animation_title">Acnimation</string>
    <string name="activity_login_title">Log In</string>
    <string name="title_activity_base">BaseActivity</string>
    <string name="login_username">Username</string>
    <string name="login_password">Password</string>

</resources>
