<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="275dp"
            android:src="@drawable/ic_company_photo"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:background="@color/button_blue"
            android:onClick="onChatClicked"
            android:text="@string/chat_button"
            android:textColor="@android:color/white"
            android:textSize="@dimen/button_text_size"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:layout_marginTop="68dp"
            android:layout_marginBottom="20dp"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:background="@color/button_orange"
            android:onClick="onLoginClicked"
            android:text="@string/login_button"
            android:textColor="@android:color/white"
            android:textSize="@dimen/button_text_size"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:layout_marginBottom="20dp"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:background="@color/button_mango"
            android:onClick="onAnimationClicked"
            android:text="@string/animation_button"
            android:textColor="@android:color/white"
            android:textSize="@dimen/button_text_size"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:layout_marginBottom="68dp"/>

    </LinearLayout>

</RelativeLayout>
